--- a/css/index.css
+++ b/css/index.css
@@ -66,11 +66,34 @@ p {
     line-height: 1.4;
 }
 
+.logo{
+    margin:
+    display:flex;
+    width: 20%;
+    justify-content: space-between
+    margin: 0 2% 20px;
+}
 .container {
     width: 800px;
     margin: 0 auto;
 }
-
+.top-image{
+    display:flex;
+    justify-content: center;
+    margin-bottom:20px;
+}
+.links{
+    width:100%;
+    display:flex;
+    justify-content:space-evenly;
+    font-size: 15px;
+    margin-bottom: 15px;
+    font-family: 'Rubik', sans-serif;
+    color:black;
+      }
+.links a {
+    color:black;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -104,13 +127,43 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+        #box1{
+            background-color: teal;
+        }
+        #box2{
+            background-color: gold;}
+
+        #box3{
+                background-color:cadetblue;
+        }
+        #box4{
+            background-color:coral;
+        }
+        #box5{
+            background-color:crimson;
+        }
+
+        #box6{
+            background-color:forestgreen;
+        }
+        #box7{
+            background-color:darkorchid;
+        }
+        #box8{
+            background-color:hotpink;
+        }
+        #box9{
+            background-color:indigo;
+        }
+        #box10{
+            background-color:dodgerblue;
+        }
 
 .bottom-content {
     display: flex;
