--- a/css/index.css
+++ b/css/index.css
@@ -73,9 +73,20 @@ p {
     justify-content: space-between
     margin: 0 2% 20px;
 }
-.container {
+.container1 {
     width: 800px;
     margin: 0 auto;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.container2 {
+    width: 800px;
+    margin: 0 auto;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .top-image{
     display:flex;
@@ -180,8 +191,12 @@ p {
 }
 
 footer {
-    width: 100%;
+    width: 65%;
+    height: auto;
     background: black;
+    display:flex;
+    justify-content:center;
+    margin: 0 auto;
 }
 
 footer nav {
@@ -196,4 +211,34 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+#about{
+    display: flex;
+    justify-content: center;
+}
+.abouttext{
+    width:65%;
+    height:auto;
+}
+#work{
+    display: flex;
+    justify-content: center;
+}
+.workText{
+    width:65%;
+    height:auto;
+}
+button{
+    background-color: white;
+  border: 2px solid black;
+  color:black;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  border-radius: 10px;
+}
+.container2{
+    padding:10px;   
 }
